static/less/global/header.less
header.global, header.global.slim {
    .square(auto);
    .navbar();
    .navbar-default();

    padding: 0;
    border: 0 none;
    background-color: @color-primary;
    margin-bottom: 0;
    transition: all .2s ease-in;
    box-shadow: none;
    border-radius: 0 !important;

    &:hover {
        background-color: fadeout(@color-primary, 20%);
    }

    > nav {
        .ionisx-container();

        padding-top: 15px;
        padding-bottom: 15px;

        h1.logo {
            margin: 0 30px 0 0;
            padding: 0;
            float: left;

            &:before {
                display: none;
            }

            a {
                .size(@logo-img-width, 48px);

                text-indent: 100%;
                white-space: nowrap;
                overflow: hidden;
                background-image: url(@logo-img-path);
                background-size: contain;
                background-repeat: no-repeat;

                @media (max-width: @screen-xs-max) {
                    .size(@logo-sm-img-width, 48px);

                    background-image: url(@logo-sm-img-path);
                }
            }
        }

        h2 {
            .square(auto);

            font: inherit;
            font-size: 0.9em;
            font-weight: 600;
            margin: 0.9em 0 0 0;
            padding: 0;
            text-shadow: none;
            color: @color-background;

            @media (max-width: @screen-sm-max) {
                display: none;
            }
        }

        ol.nav-global {
            margin: 0.6em 0 0 0;

            @media (max-width: @screen-xs-min) {
                display: none;
            }

            > li > a {
                padding: 0;
                font-weight: 500;
                color: @color-background;

                &:hover {
                    color: @white;
                }

                &:focus {
                    color: @white;
                    text-decoration: underline;
                }
            }

            .cta-register {
                display: none;
            }
        }

        ol.nav-courseware {
            margin: 0;

            > li > a.cta-login {
                .ionisx-btn(@color-primary, @white);
            }
        }

        ol.user {
            margin: 0;

            > li.primary > a {
                .ionisx-btn(@color-primary, @white);

                border-radius: 0;
                border-top-left-radius: 4px;
                border-bottom-left-radius: 4px;
                border-radius: @default-border-radius 0 0 @default-border-radius;

                &.user-link {
                    max-width: 120px;
                }

                &.dropdown.active {
                    .ionisx-btn-hover(@color-primary, @white);
                }

                &.dropdown {
                    padding: 8px 10px;
                    border-left: none;
                    border-radius: 0 @default-border-radius @default-border-radius 0;
                    letter-spacing: normal;
                }

                > span.avatar {
                    display: none;
                    background: none;
                }
            }

            ul.dropdown-menu {
                .square(auto);

                padding: 0;
                z-index: 10;
                top: 36px;
                left: initial;
                right: 0;
                box-shadow: none;
                border: 1px solid @color-primary;
                border-top: 0 none;
                border-top-right-radius: 0;
                background-color: @white;

                &:before {
                    display: none;
                }

                > li {
                    transition: all .1s ease-in;
                    border: 0 none;
                    padding: 3px 8px;

                    &:first-child {
                        display: none;
                    }

                    &:hover {
                        background-color: @color-primary;

                        > a {
                            color: @white;
                        }
                    }

                    > a {
                        border: 0 none;
                        outline: none;
                        color: @color-primary;
                        padding: 0;
                        letter-spacing: normal;

                        &:hover, &:focus {
                            background: none;
                        }
                    }
                }
            }
        }
    }
}

